[package]
name = "wechat-work-channel"
version = "0.1.0"
edition = "2021"
description = "企业微信自建应用 Channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen for WASM component model
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SHA1 for signature verification
sha1 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
